--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2016",                                
-    "module": "commonjs",                               
-    "esModuleInterop": true,                             
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,                                     
-    "skipLibCheck": true                                 
-  }
+    "target": "es2016",             // Specify ECMAScript target version
+    "module": "commonjs",            // Module system (e.g., 'commonjs' for Node.js)
+    "rootDir": "./src",              // Root directory of TypeScript files
+    "outDir": "./dist",              // Output directory for compiled files
+    "strict": true,                  // Enable strict type checking
+    "esModuleInterop": true,         // Enable interoperation between CommonJS and ES modules
+    "forceConsistentCasingInFileNames": true, // Enforce consistent casing in import paths
+    "skipLibCheck": true             // Skip type checking of declaration files (.d.ts)
+  },
+  "include": ["src"],                // Files or directories to include
+  "exclude": ["node_modules"]        // Files or directories to exclude
 }
