--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
-    "dev": "ts-node src/index.ts"
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
